[package]
name = "blockingqueue"
version = "0.1.0"
authors = ["Julian Büttner <buettner-julian@t-online.de>"]
edition = "2018"
homepage = "https://github.com/RandomApfel/rust-blockinqueue"
description = "A very very simple wrapper around Rust's mspc channel to work as a blocking queue."
license = "MIT OR Apache-2.0"

# Very very simple wrapper around Rust's mpsc channel

[dependencies]
